// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convert 1`] = `
"This is paragraph one. It has two sentences.

Paragraph two, only has one sentence."
`;

exports[`convert 2`] = `"<article><p><span>This is paragraph one. It has two sentences.</span><p><span>Paragraph two, only has one sentence.</span></article>"`;

exports[`fromPath 1`] = `
Article {
  "content": [
    {
      "content": [
        {
          "type": "Text",
          "value": "This is paragraph one. It has two sentences.",
        },
      ],
      "type": "Paragraph",
    },
    {
      "content": [
        {
          "type": "Text",
          "value": "Paragraph two, only has one sentence.",
        },
      ],
      "type": "Paragraph",
    },
  ],
  "type": "Article",
}
`;

exports[`fromString 1`] = `
Article {
  "content": [
    {
      "content": "Hello world",
      "type": "Paragraph",
    },
  ],
  "type": "Article",
}
`;

exports[`toString 1`] = `
"<article dtd-version="1.3" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:mml="http://www.w3.org/1998/Math/MathML">
  <front>
  </front>
  <body>
    <p>Hello<bold>again</bold>!</p>
  </body>
  <back>
  </back>
</article>"
`;
